# xmlserde

./: Cargo.toml
derives/: Cargo.toml
derives/src/: case.rs  container.rs  de.rs  enumeration.rs  lib.rs  ser.rs  symbol.rs
src/: lib.rs
tests/: lib.rs
xmlserde_shared/: Cargo.toml
xmlserde_shared/src/: lib.rs
