[package]
name = "xmlserde_derives"
version = "0.10.2"
description = "Derive macros for xmlserde"
authors = ["ImJeremyHe<yiliang.he@qq.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/ImJeremyHe/xmlserde"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
xmlserde_shared = { path = "../xmlserde_shared", version = "0.10.0" }
